--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -19,6 +19,41 @@
 
 }
 
+@book{gaikwad2010,
+	author = "Santosh Gaikwad, Bharti Gawali, Pravin Yannawar",
+	title = "A Review on Speech Recognition Technique",
+	year = 2010,
+	publisher = "International Journal of Computer Applications November 2010"
+}
+
+@book{douglas2002,
+	author = "Douglas A. Reynolds",
+	title = "An Overview of Automatic Speaker Recognition Technology",
+	year = 2002,
+	publisher = "IEEE International Conference"
+}
+
+@book{noor2005,
+	author = "Nawsher Ahmed Noor",
+	title = "BANGLA OPTICAL CHARACTER RECOGNITION",
+	year = 2005,
+	publisher = "Department of Computer Science and Engineering of BRAC University"
+}
+
+@book{adams1997,
+	author= "Gary Adams, Philip Resnik",
+	title = "A Language Identification Application Built on the Java Client/Server Platform",
+	year = 1997,
+	publisher = "Department of Linguistics and UMIACS University of Maryland"
+}
+
+@book{rehurek2009,
+	author = "Radim Rehurek, Milan Kolkus",
+	title = "Language Identi?cation on the Web: Extending the Dictionary Method",
+	year = 2009,
+	publisher = "Masaryk University in Brno"
+}
+
 @article{name06,
 	Author = {Name},
 	Date-Added = {2007-09-06 11:30:06 +0200},
