--- a/thesis.tex
+++ b/thesis.tex
@@ -169,7 +169,8 @@ Kraków, 2012
 \include{4/wymagania}						
 	
 %\include{5/projects_implementations}
-%\include{6/XYZ}
+\include{6/projekt_i_implementacja}
+
 
 %\include{7/discussion}               % discussion of results
 
