--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -80,6 +80,12 @@
 	publisher = "http://camel.apache.org"
 }
 
+@misc{eaipatterns, 
+	title = "EIP Patterns homepage",
+	howpublished = "\url{http://www.eaipatterns.com/toc.html}",
+	year = 2003
+}
+
 @article{name06,
 	Author = {Name},
 	Date-Added = {2007-09-06 11:30:06 +0200},
