--- a/thesis.tex
+++ b/thesis.tex
@@ -164,16 +164,16 @@ Kraków, 2012
 
 \include{1_introduction/introduction}	% background information
 \include{2/problem_analysis}
-\include{3/technologie}						% aims of the project
+%\include{3/technologie}						% aims of the project
 
 \include{4/wymagania}						
 	
-\include{5/projects_implementations}
-\include{6/XYZ}
+%\include{5/projects_implementations}
+%\include{6/XYZ}
 
-\include{7/discussion}               % discussion of results
+%\include{7/discussion}               % discussion of results
 
-\include{8/materials_methods}        % description of lab methods
+%\include{8/materials_methods}        % description of lab methods
 
 
 
